# seeding-kmeans

./: .gitignore  README.md  analyze.ipynb  check_deterministic.ipynb  cluster.ipynb  clustering_comparison.py  compare.ipynb  deterministic.py  ikmeans.py  kmeans++_check.ipynb  kmeans_clustering.py  kmeans_comparator.py  kmeans_compare.ipynb  library.py  metrics.py  preprocess.py  pyproject.toml  run_kmeans.py  utility.ipynb  utils.py
data/: Public_Schools.csv  cancer.csv  cloud.csv  jumlah-sekolah-guru-murid-dan-ruang-kelas-menurut-jenis-sekolah-2011-2016.csv  mall.csv  schools.csv  tfidf.csv
doc/: acm.tex  bib.tex  cover-jmlr.tex  csv_to_latex.ipynb  ikmeans.tex  kmeans-comparison.tex  kmeans_comp_var.tex  ref.bib  seeding_kmeans-dmkd.tex  seeding_kmeans.tex
doc/acmart/: sample-manuscript.tex  seeding_kmeans-acm.tex
